--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta name="description" content=" Category: vəkil,vəkil xidməti,hüquq" />
+    <meta name="keywords" content="vəkil,hüquq,qanun,vəkil xidməti,məhkəmə" />
+    <meta
+      name="author"
+      content="Jahangir Sirinov,İsa Sadiqli,Faxri Afandiyev"
+    />
 
+    <link rel="icon" type="image/x-icon" href="./logo.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
